# bootcamp-sriyamuthyala

./: pyproject.toml
APIs/API Client Programming/: notes.html
APIs/API Development/: notes.html
APIs/Streamlit Applications/: notes.html
Persistence/: requirements.txt
Persistence/Basic_persistence_File_and_DB/: Custom_Serialization.py  Deserialize_Pickle.py  Deserialize_YAML.py  JSON_Deserialize.py  JSON_Serialize.py  Restoring_Object_State.py  Serialization_Pickle.py  Serialize_Custom_Collections.py  Serialize_YAML.py  Serializing_cyclic_reference.py  Skipping_Attributes.py  Versioning_Serialized_Objects.py  notes.html  requirements.txt
Persistence/SQLAlchemy_Pydantic/: crud.py  database.py  main.py  notes.html  test.db
Persistence/SQLite/: notes.html
Persistence/Sqlite3_with_Python/: aggregation.py  app.py  banking_transaction.py  batch_insert.py  complex_logic.py  database_setup.py  delete_data.py  export_data.py  insert_data.py  join_queries.py  main.py  ml_price_prediction.py  notes.html  product_class.py  products.csv  read_data.py  search_product.py  store.db  transactions.py  update_data.py  update_multiple.py
Persistent_Queue_System/: README.md  notes.html  pyproject.toml  queue.db
Stream/: ex-1-7.py  ex-1-9.py
Stream/sriya-wf-basic/: commands.py  input.txt  input.txt.processed  notes.html  processing_functions.py  pyproject.toml
Stream/sriya-wf-dynamic/: config.yaml  input.txt  notes2.html  output.txt  pyproject.toml
Stream/sriya-wf-dynamic-streaming/: input.txt  notes.html  output.txt  pipeline_config.yaml  pyproject.toml
Stream/sriya-wf-dynamic-streaming/sriya_wf_dynamic_streaming/: commands.py  stream_adapter_functions.py  stream_functions.py
Stream/sriya-wf-dynamic/sriya_wf_dynamic/: process.py  stream_functions.py
consumer/: consumer.py
ops/: dashboard.py
persistent_queue/: persistent_queue.py
producer/: producer.py
python_basics/: ex-1-2.py  ex-1-5-a&b.py  ex-2-1.py  ex-3-1.py  ex-3-10.py  ex-3-12.py  ex-3-2.py  ex-3-4.py  ex-3-5.py  ex-3-6.py  ex-4-12.py  ex-4-3.py  ex-4-4.py  ex-4-6.py  ex-5-3.py  ex-5-4.py  ex-5-5.py  ex-5-6.py  ex-5-7.py  ex-5-8.py  notes.html
streams/: ex-1-2.py  ex_1_3.py  ex_1_4.py  ex_1_8.py  sample.txt  sample2.txt
tests/: test_producer.py  test_queue.py
(+87 files in other folders)
