[project]
name = "persistent-queue-system"
version = "0.1.0"
description = ""
authors = [
    {name = "sriyaraomuthyala",email = "sriyaraomuthyala@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "streamlit (>=1.42.2,<2.0.0)",
    "supervisor (>=4.2.5,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
